# shapley_fda_experiments

./: .gitignore  README.md  data_beta.ipynb  data_cluster.ipynb  data_cubic.ipynb  explore_beta_distr.ipynb  generate_data.ipynb  introduction.ipynb  misc.ipynb  predict_np.py  pyproject.toml  requirements.txt  shapley.ipynb  shapley_fda.ipynb  shapley_fda.py  shapley_fda_interpolation.py  simulator.ipynb  single_simulation.ipynb
data/: __init__.py
data/input/: scenarios.csv  scenarios_all.csv  scenarios_braga.csv  scenarios_test.csv  scenarios_vm_1.csv  scenarios_vm_2.csv  scenarios_vm_3.csv
data/output/senario_1/: X_sim_validation_1.csv  target_sim_test_1.csv  (+1 more)
functional_neural_networks/: __init__.py  basis.py  convolution.py  dense.py
hyperopt/: fnn.py  sklearn_gridsearch.py
images/: __init__.py
notebooks/: analises_shapley_experiments.ipynb  analyses_real_data.ipynb  analyses_simulations.ipynb  brownian.ipynb  conditional_expectation.ipynb  data_beta.ipynb  data_cluster.ipynb  data_cubic.ipynb  data_generator.ipynb  explore_beta_distr.ipynb  explore_brownian_mrmr.ipynb  generate_missing_scenarios.ipynb  hyperopt_fnn.ipynb  hyperopt_knn.ipynb  illustrative_example.ipynb  misc.ipynb  paper_figures.ipynb  real_data.ipynb  simulator.ipynb  single_simulation.ipynb  time_computation.ipynb  workflow.ipynb
shapley/: shaple_fda_mean.py  shapley_fda.py  shapley_fda_interpolation.py  shapley_fda_no_hash.py
utils/: config.py  data_generator.py  logger.py  paper_figures.py  process_data.py  simulator.py  utils_workflow.py  workflow.py  workflow_missing.py
(+1 files in other folders)
